MMC Version 0.13.0
  Added COPY_LAYOUT function & event handling
  Added nodeNumberIsSource to identify messages that have source node number
  Now requests param 20 (beta version) in post processing if it doesn't exist
  Updated Client
    Generate internal event when receiving LAYOUT_DATA
    NodesView & EventsByNodeView uses this new event to get settings, to update visible columns
    Added copy layout function to StartupDialog
    Added beta number if non-zero to version column in Nodes View
    Added 'enableGroup' to NodesView & EventsListByNode
    Added 'enableBusTraffic' to MainLayout
    Added column settings to BusEvents, EventsView & NodeEventsView
    Merged Sven's changes
    -  Changed settings dialogs to dropdown menu
    -  Shortened a few column names


MMC Version 0.12.0
  now refresh event indexes in requestAllEventVariablesByIndex
  Added getListOfAllNodesBackups, REQUEST_ALL_NODES_BACKUPS_LIST
  Added NodeModifiedTimestamp updated on NV & EV writes
  Reworked loading of MDF's for nodes - was failing to reload MDF if node firmware updated
  removed NODE_DESCRIPTOR_FILE_LIST event
  separated updateNodeStatus into preOpcodeProcessing & postOpcodeProcessing methods
  Fixed deleting offline nodes
  MDF's updated CANLED64-A507-2g, CANMIO-SVO-A532-4S & CANSERVO8C-A513-2u/4h/4S
  Updated Client
  - added Backups column to Node View
  - added backup notification if variables changed
  - removed redundant NODE_DESCRIPTOR_FILE_LIST event
  - added numeric limits to add event dialog
  - fixed variables display when MDF deleted
  

MMC Version 0.11.2
  Client
  - fixed missing event name & group in Events by Node list - caused by the settings change in the last version

MMC Version 0.11.1
  ProgramNode now uses load address from the hex file to decide where to start the download from
  Previously it was always 0x800, but rule sets are 0x7900
  ProgramNode now fills 0x7900 to 0x7FFF with blank (FF) for CANCOMPUTE rulesets